@@ -1,3 +1,8 @@
+2011-06-25  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* gas/mips/vr4130.s: Add some more ".set noreorder" tests.
+	* gas/mips/vr4130.d: Update accordingly.
+
 2011-06-23  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* gas/mips/pr12915.s, gas/mips/pr12915.d: New test.
